--- a/src/cui/scss/_base/_iconbutton.scss
+++ b/src/cui/scss/_base/_iconbutton.scss
@@ -13,3 +13,10 @@
     @include button-icon;
     background-color: pink;
 }
+
+// `<button>` and `<a>` won't vertically align. It's only noticeable when they're right next to each other. This will handle the case where the link follows the button; there's no way in CSS to address the other way around (the link is the one that's off by a pixel, not the button). (CP 6/21/2016)
+.cui-controls {
+    button.cui-icon + a.cui-icon {
+        top: -1px;
+    }
+}
